@@ -28,6 +28,9 @@ In 2.[6|7]
 In 2.7
 ======
 
+- Add some convenience function (e.g. a wrapper to .valid.algos()) to let the
+  curious user know which algos are available/used for a given search problem.
+
 - Define a DNAorRNA class (or NucleotideString) that is the union of the
   DNAString and RNAString classes (use a union class for this or "do it by
   hand" by defining this as a virtual class and by having the DNAString
